fixed stretched images

--- a/styles/style.css
+++ b/styles/style.css
@@ -32,7 +32,7 @@ input[type=text], textarea {
 /* Style the submit button with a specific background color etc */
 input[type=submit] {
   background-color: #76C3D2;
-  color: black;
+  /* color: black; */
   padding: 12px 20px;
   border: none;
   border-radius: 4px;
@@ -658,7 +658,7 @@ padding: 0.3em;
 }
 @media screen and (max-width: 767px){
   .helloAsh {
-    padding-bottom: 3em
+    padding-bottom: 3em;
   }
 
   .ashleyimg{
@@ -668,6 +668,14 @@ padding: 0.3em;
   .abme {
     padding-bottom: 10em;
   }
+}
+
+.mockupImage {
+  height: 100%;
+}
+
+.wfp {
+  height: 100%;
 }
 
 .stats {
